--- a/index.html
+++ b/index.html
@@ -5,36 +5,44 @@
     <title>Unit 5 Notes</title>
 </head>
 <body>
+    <h1>HTML NOTES</h1>
+
+    <hr>
+
     <h1>Headers</h1>
-    <p>Headers are used to create Titles or Section names. There are 6 different sizes pre-formatted for HTML.</p>
+    <p>Headers are used to create titles and section titles. There are 6 different sizes pre-formatted for HTML.</p>
     <h1>h1 - Computer Science</h1>
-    <h2>h1 - Computer Science</h2>
-    <h3>h1 - Computer Science</h3>
-    <h4>h1 - Computer Science</h4>
-    <h5>h1 - Computer Science</h5>
-    <h6>h1 - Computer Science</h6>
+    <h2>h2 - Computer Science</h2>
+    <h3>h3 - Computer Science</h3>
+    <h4>h4 - Computer Science</h4>
+    <h5>h5 - Computer Science</h5>
+    <h6>h6 - Computer Science</h6>
+
+    <!--End of class 2/23/2021-->
 
     <hr>
 
     <h1><u>Test Formatting</u></h1>
-    <p>There are two main types of test formatting. Those are: <b>Bold</b>, <i>Italics</i>, and <u>Underline</u>.</p>
+    <p>There are three main types of test formatting. Those are: <b>Bold</b>, <i>Italics</i>, and <u>Underline</u>.</p>
 
-    <h3><u>Inline vs. Block</u></h3>
-    <p>An <b>Inline element</b> does not move the content to a new line. It keeps tje content on the same line as the previous content. A <b>block</b> element moves the content to a new line. The program element is a block element and tne formatting styles are inline elements.</p>
-    <h3><u>Block Example</u></h3>
-    <p>This is a paragraph.</p><p>This is another paragraph. It makes a new block.</p>
-    <p>This is an example of a nested block element.</p><p>This is the nexted block.</p>
-    <p>This is a paragraph with <b>bold</b>.</p><b>This</b><i>is</i><u>a bunch of</u><b>inline</b><i>elements.</i>
+    <h2><u>Inline vs. Block Elements</u></h2>
+    <p>A <b>block element</b> moves the content to a new line. The paragraph and header elements are block elements. An <b>Inline element</b> does not display its content to a new line. It keeps the content on the same line as the previous content. Bold, italics, and underline are all inline elements.</p>
+
+    <h3><u>Block Element Examples</u></h3>
+    <p>This is a paragraph.</p><p>This is a paragraph on the same line in the code as the previous paragraph, but it still moves to he next line.</p>
+    <p>This is an example of a nested block element.<p>This is the nested block.</p></p>
+
+    <h3><u>Inline Element Examples</u></h3>
+    <p>This is a paragraph with <b>bold</b>. <b>This</b> <i>is</i> <u>a bunch of</u> <b>inline</b> <i>elements.</i></p>
 
     <h2>Vertical Text Spacing</h2>
-    <p>There are two elements that help with vertical spacing between block elements. A line break moves the content down to a new line. Its similar to the enter key in a word document. A horizontal rule, is a line break with a horizontal bar across the page. Both are block elements</p>
+    <p>There are two elements that help with vertical spacing between block elements. A <b>line break</b> element adds an empty line and moves the content down to a new line. Its similar to the <kbd>ENTER</kbd> key in a Google/Word doc. A <b>horizontal rule</b> is a line break with a horizontal bar across the page. Both of these are block elements</p>
     <p>Below this paragraph is a line break.</p>
     <br>
     <p>Above this paragraph is a line break.</p>
     <p>Below this paragraph is a horizontal rule.</p>
-    <hr>
 
-    <br><hr>
+    <hr>
 
 </body>
 </html>
