Finished Attributes Notes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Unit 5 Notes</title>
 </head>
-<body>
-    <h1>HTML NOTES</h1>
+<body style="background-color: #eeeeee">
+    <h1 style="color: #ffd369">HTML NOTES</h1>
 
     <hr>
 
-    <h1>Headers</h1>
+    <h1 style="color: #ffd369">Headers</h1>
     <p>Headers are used to create titles and section titles. There are 6 different sizes pre-formatted for HTML.</p>
     <h1>h1 - Computer Science</h1>
     <h2>h2 - Computer Science</h2>
@@ -22,7 +22,7 @@
 
     <hr>
 
-    <h1><u>Test Formatting</u></h1>
+    <h1 style="color: #ffd369"><u>Test Formatting</u></h1>
     <p>There are three main types of test formatting. Those are: <b>Bold</b>, <i>Italics</i>, and <u>Underline</u>.</p>
 
     <h2><u>Inline vs. Block Elements</u></h2>
@@ -43,6 +43,24 @@
     <p>Below this paragraph is a horizontal rule.</p>
 
     <hr>
+
+    <h1 style="color: #ffd369">Attributes</h1>
+    <p><b>Attributes</b> are properties which can change an HTML element. Attriutes are written in the opening tag of ANY html element. The most common attributes are <i>src</i>, <i>href</i>, <i>class</i>, <i>id</i>, and <i>style</i>.</p>
+
+    <h2>Inline CSS Styles</h2>
+    <p>The <i>style</i> attribute allows you to add CSS styles to any HTML element.</p>
+
+    <p style="color: mediumpurple">This paragraph has inline CSS style which changes the font color to purple.</p>
+
+    <p style="background-color: lightsteelblue">This paragraph has inline CSS style which changes the background color.</p>
+
+    <p style="color: deepskyblue; background-color: midnightblue">This paragraph has inline CSS style which changes the font color <b>AND</b> the background color.</p>
+
+    <p style="font-family: Jokerman">This paragraph has a different font type.</p>
+
+    <p style="font-size: 24px">This paragraph has a larger font size.</p>
+
+    <p style="background-color: #393e46; color: #ffd369; font-family: Impact; font-size: 72px">This paragraph has all 4 inline styles.</p>
 
 </body>
 </html>
